--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,24 @@
+.experimentalFont {
+  font-family: 'Press Start 2P', sans-serif;
+  font-family: 'VT323', monospace;
+}
+
+.title,
+.subtitle,
+blockquote {
+  font-family: 'Press Start 2P', sans-serif;
+  font-family: 'VT323', monospace;
+  font-weight: 600;
+}
+blockquote {
+  font-weight: 400;
+}
+
+*.level .level-item .subtitle {
+  font-family: 'VT323', monospace;
+  font-weight: 600;
+}
+
 div.loader {
   height: 100px;
   width: 100px;
@@ -24,18 +45,27 @@ label input {
   margin-inline: 10px;
 }
 
+.dropdown-menu {
+  width: 50%;
+  max-width: 450px;
+  min-width: 300px;
+}
+
+/* react-slider styles */
+
 .horizontal-slider {
   width: 80%;
   height: 50px;
   margin: auto;
   margin-top: -15px;
 }
+
 .example-thumb {
   cursor: pointer;
   position: absolute;
   z-index: 100;
   background: #ffffff;
-  border: 5px solid #0075ff;
+  border: 10px solid #0075ff;
   border-radius: 100%;
   display: block;
   box-shadow: 0 0 2px 0 rgb(0 0 0 / 44%);
@@ -47,8 +77,7 @@ label input {
   position: relative;
   background: #ddd;
 }
-.example-track.example-track-0,
-.example-track.example-track-2 {
+.example-track.example-track-1 {
   background: #0075ff;
 }
 .horizontal-slider .example-track {
@@ -56,7 +85,7 @@ label input {
   height: 4px;
 }
 .horizontal-slider .example-thumb {
-  top: 17px;
+  top: 12px;
   width: 10px;
   outline: none;
   height: 10px;
