--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 .experimentalFont {
-  font-family: "Press Start 2P", sans-serif;
-  font-family: "VT323", monospace;
+  font-family: 'Press Start 2P', sans-serif;
+  font-family: 'VT323', monospace;
 }
 
 .navbar-item img {
@@ -10,8 +10,8 @@
 .title,
 .subtitle,
 blockquote {
-  font-family: "Press Start 2P", sans-serif;
-  font-family: "VT323", monospace;
+  font-family: 'Press Start 2P', sans-serif;
+  font-family: 'VT323', monospace;
   font-weight: 600;
 }
 blockquote {
@@ -19,7 +19,7 @@ blockquote {
 }
 
 *.level .level-item .subtitle {
-  font-family: "VT323", monospace;
+  font-family: 'VT323', monospace;
   font-weight: 600;
 }
 
