--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@
   min-height: 28px;
 }
 
+@media (prefers-color-scheme: light) {
+  .navbar {
+    border-bottom: 2px solid;
+  }
+}
+
 .title,
 .subtitle,
 blockquote {
