Users and games (#196)
* Stubbed out a games table.
Moved pagination to its own component.
Refactored charts to use this component.

* Game filter functioning.

* Added game title filter.
Cleaned up some pagination control stuff.

* Adds a modal for selected game in the table.

* prettier ran.

* Fixes searching on the non-first page.

* Removes some debug code.

* Adds the user list stuff. I don't know if I like it yet, but it's something.

* Add game title as an optional display item to nominationList.

* Adds option to display game title in nomination list.

* Finished everything I wanted to accomplish with this feature set.

* Few more minor changes to the users queries.

* Adjusts the user sort.

* Adds the copy stuff to the game screen. Adjusts points to work with new retroachievements column.

* Automated DB Update 2024-05-16 10:18

* Remove duplicate game entries.

* Automated DB Update 2024-05-16 16:44

* Automated DB Update 2024-05-17 11:05

* Automated DB Update 2024-05-20 00:37

* Automated DB Update 2024-05-20 09:17

* Remove duplicate entry for Driver game.

* Automated DB Update 2024-05-21 07:43

* Automated DB Update 2024-05-22 08:39

* Automated DB Update 2024-05-23 09:14

* Added time to beat records to a bunch of stuff.

* Ensure the other title is included in queries.

* Automated DB Update 2024-05-23 10:37

* Fix query breakage.

* Automated DB Update 2024-05-24 08:24

* Add missing '%' sign.

* Add points disclaimer to top of user completions table.

* Prettier run again.

--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,9 @@ label input {
   height: 10px;
   line-height: 38px;
 }
+.table.is-hoverable {
+  cursor: pointer;
+}
+.tabs .tag {
+  margin-inline-start: 0.5em;
+}
